<resources>
    <string name="app_name">In the name of Beer</string>

    <string name="hello_world">Available Beers!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Click</string>
    <string name="msg">Time to pay the bill ! </string>
    <string name="msg2">Cancellation</string>
    <string name="title_activity_second">Purchasing </string>
    <string name="next" />
    <string name="title_activity_sub">My Beer Mug</string>
    <string name="empty_sub">My Beer Mug is empty !</string>
    <string name="Reco">Recommendations</string>
    <string name="Top">Top5</string>
    <string name="Categories">Categories</string>
    <string name="Sug">Suggest a beer</string>
    <string name="Unavailable">product unavailable</string>
    <string name="available">product available</string>
    <string name="addedMessage">added to your beer mug !</string>
    <string name="addMessage">Add to your beer mug ?</string>
    <string name="help">Help</string>
    <string name="helpReco">"Recommendations" display the trending beers</string>
    <string name="helpTop5">"Top5" display he most liked beers</string>
    <string name="helpCat">"Categories" display available categories to sort beers</string>
    <string name="HelpSug">"Suggest a beer" allows you to submit a beer</string>
    <string name="helpClick">Click to display Availability</string>
    <string name="helpLongClick">LongClick to add to beer Mug</string>
    <string name="helpClickMug">Click on the beer Mug to display your purchases</string>
    <string name="recoText">These are the trending beers of the week !</string>



<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>string>
<string name="drawer_close">Close</string>
<string name="button_order">Order Beer</string>
    <string name="title_help_activity">Help</string>
    <string name="title_top5">Top 5 Beers </string>
    <string name="title_reco">Trending Beers </string>

</resources>
